--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "description": "Send Laravel logs to a Telegram chat via Telegram Bot.",
   "homepage": "https://github.com/redrum0x/laravel-telegram-logging",
   "require": {
-    "php": ">=8.0",
-    "laravel/framework": "7.0 || ^8.0 || ^9.0 || ^10.0",
-    "monolog/monolog": "2.*"
+    "php": ">=8.1",
+    "laravel/framework": "^10.0",
+    "monolog/monolog": "3.*"
   },
   "license": "MIT",
   "minimum-stability": "dev",
